--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -22,5 +22,8 @@ jobs:
       - name: Run Vuepress build
         run: npm run build
 
-      - name: Deploy GH Pages
-        run: git checkout gh-pages && git add . && git commit -m "website deploy" && git push origin gh-pages
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./docs
