--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -27,3 +27,9 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./docs
+
+      - name: Purge TQ backend assets
+        uses: fjogeleit/http-request-action@v1
+        with:
+          url: 'https://us-central1-twilioquest-prod.cloudfunctions.net/app/quest/api/v1/extension/purge/docs?auth=${{ secrets.EXTENSION_DOCS_DELETE_AUTH }}'
+          method: 'GET'
